# bar-scheduler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  REFERENCES.md  pyproject.toml  setup.cfg  task.md
backlog/: bar_scheduler_MAIN.md  pullup_fixes_0.md
docs/: 1rm_formulas.md  FAQ.md  adaptation_guide.md  api_info.md  assessment_protocols.md  cli_examples.md  core_training_formulas_fatigue.md  exercise-structure.md  features.md  formulas_reference.md  max_estimation.md  model.md  performance-formulas.md  plan_logic.md  training_model.md
docs/exercises/: bss.md  dip.md  pull_up.md
docs/references/: max_estimation.md
src/bar_scheduler/: __init__.py  containers.py  exercises.yaml
src/bar_scheduler/api/: CLAUDE.md  __init__.py  _analysis.py  _catalog.py  _common.py  _ebr.py  _equipment.py  _errors.py  _exercises.py  _log_equipment.py  _plan.py  _plan_build.py  _profile.py  _progress.py  _public.py  _sessions.py  _timeline_dict.py  _trajectory.py  _trajectory_project.py  _utils.py  _volume.py  api.py  types.py
src/bar_scheduler/cli/: __init__.py  app.py  main.py  views.py
tests/: CLAUDE.md  __init__.py  test_api.py  test_cli_smoke.py  test_core_formulas.py  test_i18n.py  test_plan_integration.py  test_planner_logic.py  test_refresh_plan.py
tests/golden/: conftest.py  constants_p1.py  constants_p2.py  constants_p3.py  history_data.py  regenerate.py  test_layer1_init.py  test_layer2_plan.py  test_layer3_test.py  test_layer4_volume.py  test_layer5_sim.py
tests/unit/: conftest.py  test_api_analysis.py  test_api_catalog_equipment.py  test_api_flows.py  test_api_profile.py  test_api_sessions_plan.py  test_config_loader.py  test_di_user_store.py  test_domain_context.py  test_exercise_repository.py  test_io_equipment_store.py  test_io_exercise_roster_store.py  test_io_history_store.py  test_io_plan_cache_store.py  test_io_plan_settings_store.py  test_io_profile_document.py  test_io_profile_store.py  test_io_user_store.py  test_math.py  test_math_interpolation.py  test_math_normalization.py  test_math_onerm.py  test_math_training_max.py  test_planning_service.py  test_planning_service_fakes.py  test_planning_service_real.py  test_policies_adaptation.py  test_policies_autoregulation.py  test_policies_calendar.py  test_policies_deload.py  test_policies_fatigue.py  test_policies_fatigue_predicted.py  test_policies_grip.py  test_policies_load.py  test_policies_load_assistance.py  test_policies_load_weight.py  test_policies_max_estimation.py  test_policies_plateau.py  test_policies_progression.py  test_policies_rest.py  (+12 more)
(+117 files in other folders)
