[project]
name = "bar-scheduler"
version = "0.5.1"
description = "Evidence-informed strength training planner -- Python library and planning engine"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Potapenko Bogdan"}
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bar_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py314"
