[project]
name = "bar-scheduler"
version = "0.7.1"
description = "Evidence-informed strength training planner -- Python library and planning engine"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Potapenko Bogdan"}
]

dependencies = [
    "dependency-injector>=4.49.1",
    "omegaconf>=2.3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9",
    "time-machine>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bar_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py314"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.9",
    "time-machine>=2.10",
]
